<package format="3">
  <name>industrial_ci</name>
  <version>0.8.0</version>
  <description>This package contains CI (Continuous Integration) configuration that any ROS-powered packages can commonly use. Some notable feature:
    <ul>
      <li>Checks if your package builds, installs without issues. If unit/system tests are defined run them. <a href = "http://wiki.ros.org/bloom/Tutorials/PrereleaseTest">ROS Prerelease Test</a> can optionally be run.</li>
      <li>Proven to cover the general requirements of the ROS-based robotics repositories. Easily configurable.</li>
      <li>Users can add custom pre/post processes.</li>
      <li>Covers ROS Hydro, Indigo, Jade, Kinetic, Lunar, Melodic distribution</li>
      <li>This package provides scripts for `Bitbucket CI`, `Gitlab CI`, and `Travis CI` only, but it can be easily adapted for other CI services.</li>
    </ul>
  </description>
  <license>Apache License 2.0</license>
  <maintainer email="iisaito@kinugarage.com">Isaac I. Y. Saito</maintainer>
  <maintainer email="mathias.luedtke@ipa.fraunhofer.de">Mathias Lüdtke</maintainer>
  <maintainer email="miguel.prada@tecnalia.com">Miguel Prada</maintainer>
  <author>Isaac I. Y. Saito</author>
  <author email="mathias.luedtke@ipa.fraunhofer.de">Mathias Lüdtke</author>

  <url type="website">http://wiki.ros.org/industrial_ci</url>
  <url type="repository">https://github.com/ros-industrial/industrial_ci</url>
  <url type="bugtracker">https://github.com/ros-industrial/industrial_ci/issues</url>

  <buildtool_depend condition="$ROS_VERSION != 2">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>

  <exec_depend>coreutils</exec_depend>
  <exec_depend>python-yaml</exec_depend>

  <export>
      <build_type condition="$ROS_VERSION != 2">catkin</build_type>
      <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>
