<?xml version="1.0"?>
<package format="2">
  <name>industrial_ci_testpkg</name>
  <version>0.3.1</version>
  <description>This package is for test purposes only.</description>

  <maintainer email="130s@2000.jukuin.keio.ac.jp">Isaac I. Y. Saito</maintainer>
  <author email="130s@2000.jukuin.keio.ac.jp">Isaac I. Y. Saito</author>
  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy_tutorials</exec_depend>
  <test_depend>rospy_tutorials</test_depend>
  <exec_depend>rostest</exec_depend>
  <test_depend>rostest</test_depend>
  <export />
</package>
