<?xml version="1.0"?>
<package>
  <name>testpkg_broken_install</name>
  <version>0.3.1</version>
  <description>Test purpose only for industrial_ci package. Primary purpose
    is to be a package with limited install rules. 
  </description>

  <maintainer email="130s@2000.jukuin.keio.ac.jp">Isaac I. Y. Saito</maintainer>
  <author email="130s@2000.jukuin.keio.ac.jp">Isaac I. Y. Saito</author>
  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>rospy</run_depend>
  <export />
</package>
